fixed a hamburger-menu-bug that was causing layout shifts [deploy]

--- a/static/css/global/hamburger.css
+++ b/static/css/global/hamburger.css
@@ -12,7 +12,7 @@
 } */
 
 .wrapper-hamburger {
-	position: relative;
+	position: absolute;
 	display: none;
 	width: 100%;
 	margin: 0;
