--- a/static/css/layouts/faqs.css
+++ b/static/css/layouts/faqs.css
@@ -8,18 +8,19 @@
 }
 
 section.faqs {
-	width: 100%;
-	grid-area: accordion;
-	position: relative;
+	/* width: 100%; */
+	/* grid-area: accordion; */
+	/* position: relative; */
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
 	padding-left: 64px;
 	padding-right: 256px;
 	padding-top: 16px;
+	padding-bottom: 32px;
 	/* align-items: flex-end; */
 	animation: fadein 1.15s;
-	z-index: 2;
+	/* z-index: 2; */
 }
 
 /* ##################
@@ -87,12 +88,13 @@ section.faqs {
 /* ----------- 600-WIDTH */
 @media only screen and (max-width: 959px) {
 	section.faqs {
-		padding-left: 32px;
+		padding-top: 80px;
+		align-items: center;
 	}
 }
 /* ----------- 320-WIDTH */
 @media only screen and (max-width: 599px) {
 	section.faqs {
-		padding-left: 16px;
+		padding-top: 56px;
 	}
 }
